# gearis-stormhacks

./: .gitignore  README.md
backend/: main.py  react_graph.mmd  requirements.txt
backend/agent/: graph.py  main.py  nodes.py  state.py  tools.py
backend/agent/tools/: browser_toolkit.py  camera_toolkit.py  cool_toolkit.py  discord_toolkit.py  google_toolkit.py  rag.py  spotify_toolkit.py  system_toolkit.py  tauri_toolkit.py  tools.py  youtube_toolkit.py
backend/agent/utils/: __init__.py  connection_manager.py  intent_detector.py  mapping.py  routing.py
backend/elabs/: main.py
backend/storage/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: Switch.css  Switch.tsx  ToolsCalled.tsx
frontend/src/hooks/: useAgentWebSocket.tsx
gearis-stormhacks-frontend/: package-lock.json  package.json
wordwake/: main.py
