[package]
name = "Jarvis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Enable system-tray, shell-open, and macOS private APIs (for tray/menu bar apps)
tauri = { version = "1.8.3", features = [ "system-tray", "shell-open", "shell-execute", "window-hide", "window-show", "macos-private-api"]  }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
